auth and template have been udated
